tests/syntax/invalid/hex_literal_trailing_junk.zn
def f() {
    // error: characters adjacent to hex literal
    var x = 0xABCDjunk;
}
